Allow new requests, stop withdrawal of cancelations

--- a/pretix_swap/templates/pretix_swap/presale/order_box.html
+++ b/pretix_swap/templates/pretix_swap/presale/order_box.html
@@ -11,8 +11,8 @@
             {% for position in positions %}
                 <li>
                     <b>{{ position.item.name }}{% if position.attendee_name %} ({{ position.attendee_name }}){% endif %}:</b>
-                    {% if position.swap_states.all %}
-                        {% for state in position.swap_states.all %}
+                    {% if position.ordered_requests.all %}
+                        {% for state in position.ordered_requests.all %}
                             {{ state.get_notification }}
                             {% if state.swap_type == state.Types.SWAP and state.state == state.States.REQUESTED and specific_swap_allowed %}
                                 {% trans "If you want to swap with somebody specific, give them this swap token: " %}
@@ -20,19 +20,20 @@
                                     {{ state.swap_code }}
                                 </span>
                             {% endif %}
-                            {% if state.state != state.States.COMPLETED and not state.partner %}
+                            {% if state.state != state.States.COMPLETED and not state.partner and state.swap_type == state.Types.SWAP %}
                                 <a href="{% eventurl request.event "plugins:pretix_swap:swap.cancel" order=position.order.code secret=position.order.secret pk=state.pk %}" class="btn btn-danger">
                                     <i class="fa fa-trash-o"></i> {% trans "Cancel request" %}
                                 </a>
                             {% endif %}
                             {# TODO allow creation if all others are completed #}
                         {% endfor %}
-                    {% elif position.item in items %}
+                    {% endif %}
+                    {% if position.item in items and position.no_active_requests %}
                         {% trans "You can request to swap or cancel this product." %}
                         <a href="{% eventurl request.event "plugins:pretix_swap:swap.new" order=position.order.code secret=position.order.secret %}?position={{ position.pk }}" class="btn btn-default">
                             <i class="fa fa-plus"></i> {% trans "New request" %}
                         </a>
-                    {% else %}
+                    {% elif position.no_active_requests %}
                         {% trans "This product cannot be changed at the moment." %}
                     {% endif %}
                 </li>
