Add cancellation fee

--- a/pretix_swap/templates/pretix_swap/control/settings.html
+++ b/pretix_swap/templates/pretix_swap/control/settings.html
@@ -52,6 +52,7 @@
                 {% bootstrap_field form.swap_orderpositions_specific layout="control" %}
                 {% bootstrap_field form.cancel_orderpositions layout="control" %}
                 {% bootstrap_field form.cancel_orderpositions_specific layout="control" %}
+                {% bootstrap_field form.swap_cancellation_fee layout="control" %}
                 <div class="form-group submit-group">
                     <button type="submit" class="btn btn-primary btn-save">
                         {% trans "Save" %}
