Add frontend to new backend

--- a/pretix_swap/templates/pretix_swap/fragment_swap_settings.html
+++ b/pretix_swap/templates/pretix_swap/fragment_swap_settings.html
@@ -5,3 +5,4 @@
 {% bootstrap_field form.name layout="control" %}
 {% bootstrap_field form.swap_type layout="control" %}
 {% bootstrap_field form.items layout="control" %}
+{% bootstrap_field form.subevents layout="control" %}
