--- a/pretix_swap/templates/pretix_swap/presale/order_box.html
+++ b/pretix_swap/templates/pretix_swap/presale/order_box.html
@@ -28,7 +28,7 @@
                             {# TODO allow creation if all others are completed #}
                         {% endfor %}
                     {% endif %}
-                    {% if position.item in items and position.no_active_requests %}
+                    {% if position.no_active_requests and actions_allowed %}
                         {% trans "You can request to swap or cancel this product." %}
                         <a href="{% eventurl request.event "plugins:pretix_swap:swap.new" order=position.order.code secret=position.order.secret %}?position={{ position.pk }}" class="btn btn-default">
                             <i class="fa fa-plus"></i> {% trans "New request" %}
