Add compatibility with banktransfer refunds

--- a/pretix_swap/templates/pretix_swap/presale/new_confirm.html
+++ b/pretix_swap/templates/pretix_swap/presale/new_confirm.html
@@ -19,6 +19,7 @@
                 {% endif %}
             {% endif %}
         </ul>
+        {% if rendered_confirm %}{{ rendered_confirm }}{% endif %}
         <div class="clearfix"></div>
         <p>
         </p>
